# backend-fastapi

./: .env_dummy  .env_example  .flake8  README.md  db_init.py  docker-compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
app/: app.py  config.py  database.py  main.py  models.py  oauth2.py  schemas.py
app/data/: __init__.py  models.py
app/endpoint_functions/: __init__.py  auth.py  experiences.py  users.py
app/endpoints/: __init__.py  auth.py  experiences.py  users.py
app/functions/: __init__.py  experiences.py  users.py  utils.py
app/functions/crud/: experiences.py  users.py
src/backend_fastapi/: __init__.py  __main__.py  _config.py  app_old.py
src/backend_fastapi/data/: __init__.py  config.py  database.py  models.py  schemas.py
src/backend_fastapi/endpoint_functions/: __init__.py  auth.py  experiences.py  users.py
src/backend_fastapi/endpoints/: __init__.py  auth.py  experiences.py  users.py
src/backend_fastapi/entry_points/: __init__.py  _create_database.py  _create_db_tables.py  app.py
tests/: __init__.py  conftest.py  database.py  test_experiences.py  test_users.py
