[tool.poetry]
name = "backend-fastapi"
version = "0.1.0"
description = ""
authors = ["Llorenç Buil"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.0"
pydantic = "^2.9.0"
sqlalchemy = "^2.0.34"
pre-commit = "^3.8.0"
passlib = "^1.7.4"
ruff = "^0.6.4"
python-jose = "^3.3.0"
uvicorn = "^0.30.6"
pydantic-settings = "^2.4.0"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.9"
pytest = "^8.3.2"
httpx = "^0.27.2"

[tool.ruff]
line-length = 100
lint.select = [
    "F", "E", "W", "ARG", "C90", "I", "N", "D", "UP", "YTT", "ANN", "S", "BLE", "FBT", "B", "A",
    "COM", "C40", "DTZ", "T10", "DJ", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT",
    "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY",
    "NPY", "RUF"
]
lint.ignore = ["PD901", "ANN002", "ANN003", "TRY002", "TRY003", "BLE001", "PLR0913", "S101", "ANN401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
