[project]
name = "backend-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.2",
    "click>=8.1.7",
    "fastapi>=0.114.0",
    "pydantic>=2.9.0",
    "sqlalchemy>=2.0.34",
    "passlib>=1.7.4",
    "python-jose>=3.3.0",
    "uvicorn>=0.30.6",
    "pydantic-settings>=2.4.0",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.9",
    "httpx>=0.27.2"
]

[project.scripts]
backend-fastapi = "backend_fastapi.__main__:_main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
lint.select = ["ALL"]
lint.ignore = [
    "ANN002", "ANN003", "ANN401", "COM812", "D203", "D205", "D213", "D402", "EXE002", "FA102",
    "ISC001", "PD901", "PGH003", "PLR0913", "S101", "TRY003"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]
